--- a/tests/dummy/app/styles/app.css
+++ b/tests/dummy/app/styles/app.css
@@ -76,7 +76,6 @@ p {
   padding: 1rem;
   background: var(--primary-color);
   color: #fff;
-  overflow-x: hidden;
 }
 
 .header-logo-link {
